made a prediction about exercise 2 in js1-week2

--- a/js1-week-2/2.md
+++ b/js1-week-2/2.md
@@ -9,7 +9,7 @@ What do you think the output will look like?
 If some parts of the code are unfamiliar, then look them up on MDN.
 Write your prediction below:
 
-{YOUR PREDICTION HERE}
+Our prediction is that there will be several rows of asterisks printed out, from a count of 1 to a count of 9.
 
 Once you've written your prediction, then commit your work. Now actually run `2.js` using node and write your answer below:
 
